Fixes and improving maintainability